--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,3 +1,3 @@
-<ion-view title="Home" id="page1">
+<ion-view title="Home" id="page1" style="background-color:#FFFFFF;">
   <ion-content padding="true" class="has-header"></ion-content>
 </ion-view>
