--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class="bar-royal">
       <ion-nav-back-button></ion-nav-back-button>
       <ion-nav-buttons side="left">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
@@ -8,12 +8,16 @@
     </ion-nav-bar>
     <ion-nav-view name="side-menu21"></ion-nav-view>
   </ion-side-menu-content>
-  <ion-side-menu side="left" id="side-menu21">
-    <ion-header-bar class="bar-stable">
+  <ion-side-menu side="left" id="side-menu21" style="background-color:#FFFFFF;">
+    <ion-header-bar class="bar-calm">
       <div class="title">Menu</div>
     </ion-header-bar>
     <ion-content padding="false" class="side-menu-left has-header ">
       <ion-list id="menu-list1">
+        <ion-item class="item-avatar balanced" id="menu-list-item9">
+          <img src="img/5T8DO406R26mFin0p12v_user1.png">
+          <h2balanced>Username</h2balanced>
+        </ion-item>
         <ion-item class="positive" id="menu-list-item1" ui-sref="menu.home" menu-close="">Home</ion-item>
         <ion-item class="positive" id="menu-list-item2" ui-sref="menu.telNumber" menu-close="">Tel Number</ion-item>
         <ion-item class="positive" id="menu-list-item3" ui-sref="menu.profile" menu-close="">Profile</ion-item>
@@ -23,6 +27,7 @@
         <ion-item class="positive" id="menu-list-item7" ui-sref="menu.aboutUs" menu-close="">About Us</ion-item>
         <ion-item class="positive" id="menu-list-item8" ui-sref="menu.support" menu-close="">Support</ion-item>
       </ion-list>
+      <button id="menu-button2" class="button button-positive  button-block button-outline icon-left ion-log-out">Log Out</button>
     </ion-content>
   </ion-side-menu>
 </ion-side-menus>
