--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-royal">
+    <ion-nav-bar class="bar-calm">
       <ion-nav-back-button></ion-nav-back-button>
       <ion-nav-buttons side="left">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
@@ -15,7 +15,7 @@
     <ion-content padding="false" class="side-menu-left has-header ">
       <ion-list id="menu-list1">
         <ion-item class="item-avatar balanced" id="menu-list-item9">
-          <img src="img/5T8DO406R26mFin0p12v_user1.png">
+          <img src="../img/user.png">
           <h2balanced>Username</h2balanced>
         </ion-item>
         <ion-item class="positive" id="menu-list-item1" ui-sref="menu.home" menu-close="">Home</ion-item>
