--- a/www/templates/payment.html
+++ b/www/templates/payment.html
@@ -1,3 +1,3 @@
 <ion-view title="Payment" id="page6">
-  <ion-content padding="true" class="has-header"></ion-content>
+  <ion-content padding="true" style="background: url(../img/background.jpg) no-repeat center;background-size:cover;" class="has-header"></ion-content>
 </ion-view>
