--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,3 +1,3 @@
 <ion-view title="Profile" id="page3">
-  <ion-content padding="true" class="has-header"></ion-content>
+  <ion-content padding="true" style="background: url(img/gRxB4djnT3CiIHVj6EAJ_Infrared20Wood20Pattern20Background20Android20Wallpaper.jpg) no-repeat center;background-size:cover;" class="has-header"></ion-content>
 </ion-view>
