--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -1,5 +1,5 @@
-<ion-view title="Signup" id="page13">
-  <ion-content padding="true" class="has-header">
+<ion-view title="Signup" hide-back-button="true" id="page13">
+  <ion-content padding="true" style="background: url(../img/background.jpg) no-repeat center;background-size:cover;" class="has-header">
     <form id="signup-form1" class="list">
       <ion-list id="signup-list3">
         <label class="item item-input" id="signup-input1">
@@ -8,19 +8,19 @@
         </label>
         <label class="item item-input" id="signup-input6">
           <span class="input-label">Phone Number</span>
-          <input type="text" placeholder="">
+          <input type="tel" placeholder="">
         </label>
         <label class="item item-input" id="signup-input2">
           <span class="input-label">Email</span>
-          <input type="text" placeholder="">
+          <input type="email" placeholder="">
         </label>
         <label class="item item-input" id="signup-input3">
           <span class="input-label">Password</span>
-          <input type="text" placeholder="">
+          <input type="password" placeholder="">
         </label>
       </ion-list>
       <button id="signup-button9" class="button button-stable  button-block">Sign up</button>
+      <a ui-sref="login" id="signup-button12" class="button button-energized  button-block button-clear">Already have an existing account</a>
     </form>
-    <a ui-sref="login" id="signup-button12" class="button button-positive  button-block button-clear">Olready have an existing account</a>
   </ion-content>
 </ion-view>
