layout bug is fixed

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -15,7 +15,7 @@
     <ion-content padding="false" class="side-menu-left has-header ">
       <ion-list id="menu-list1">
         <ion-item class="item-avatar balanced" id="menu-list-item9">
-          <img src="../img/user.png">
+          <img src="img/user.png">
           <h2balanced>Username</h2balanced>
         </ion-item>
         <ion-item class="positive" id="menu-list-item1" ui-sref="menu.home" menu-close="">Home</ion-item>
