--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -1,5 +1,5 @@
 <ion-view title="Signup" hide-back-button="true" id="page13">
-  <ion-content padding="true" style="background: url(../img/background.jpg) no-repeat center;background-size:cover;" class="has-header">
+  <ion-content padding="true" style="background: url(img/background.jpg) no-repeat center;background-size:cover;" class="has-header">
     <form id="signup-form1" class="list">
       <ion-list id="signup-list3">
         <label class="item item-input" id="signup-input1">
@@ -20,7 +20,7 @@
         </label>
       </ion-list>
       <button id="signup-button9" class="button button-stable  button-block">Sign up</button>
-      <a ui-sref="login" id="signup-button12" class="button button-energized  button-block button-clear">Already have an existing account</a>
+      <a ui-sref="login" id="signup-button12" class="button button-energized  button-block button-clear">Olready have an existing account</a>
     </form>
   </ion-content>
 </ion-view>
