--- a/www/templates/welcomePage1.html
+++ b/www/templates/welcomePage1.html
@@ -1,7 +1,7 @@
-<ion-view title="Welcome Page 1" hide-nav-bar="true" hide-back-button="true" id="page9">
-  <ion-content padding="true" style="background: url(../img/background.jpg) no-repeat center;background-size:cover;" class=" manual-remove-top-padding" scroll="false">
+<ion-view title="Welcome Page 1" hide-nav-bar="true" hide-back-button="true" id="page9" style="background-color:#547DAA;">
+  <ion-content padding="true" style="background: url(img/background.jpg) no-repeat center;background-size:cover;" class=" manual-remove-top-padding" scroll="false">
     <div>
-      <img src="../img/taxime.png" style="display: block; width: 100%; height: auto; margin-left: auto; margin-right: auto;">
+      <img src="img/taxime.png" style="display: block; width: 100%; height: auto; margin-left: auto; margin-right: auto;">
     </div>
     <h2 id="welcomePage1-heading5" style="color:#F8EBEE;text-align:center;">Welcome to our Taxi Service</h2>
     <a ui-sref="welcomePage2" id="welcomePage1-button7" style="font-weight:500;font-style:italic;color:#1753B3;font-size:25px;border-radius:6px 6px 6px 6px;" class="button button-energized button-large button-block icon-right ion-android-arrow-forward">Next</a>
