--- a/www/templates/aboutUs.html
+++ b/www/templates/aboutUs.html
@@ -1,3 +1,3 @@
 <ion-view title="About Us" id="page7">
-  <ion-content padding="true" style="background: url(../img/background.jpg) no-repeat center;background-size:cover;" class="has-header">
+  <ion-content padding="true" style="background: url(img/background.jpg) no-repeat center;background-size:cover;" class="has-header"></ion-content>
 </ion-view>
