--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,5 +1,5 @@
 <ion-view title="Login" hide-back-button="true" id="page14">
-  <ion-content padding="true" style="background: url(../img/background.jpg) no-repeat center;background-size:cover;" class="has-header">
+  <ion-content padding="true" style="background: url(img/background.jpg) no-repeat center;background-size:cover;" class="has-header">
     <form id="login-form2" class="list">
       <ion-list id="login-list4">
         <label class="item item-input" id="login-input4">
