--- a/www/templates/myTrips.html
+++ b/www/templates/myTrips.html
@@ -1,3 +1,3 @@
 <ion-view title="My Trips" id="page4">
-  <ion-content padding="true" style="background: url(../img/background.jpg) no-repeat center;background-size:cover;" class="has-header"></ion-content>
+  <ion-content padding="true" style="background: url(img/background.jpg) no-repeat center;background-size:cover;" class="has-header"></ion-content>
 </ion-view>
