most of the errors are fixed. getCurrentPosition still not working

--- a/www/templates/welcomePage2.html
+++ b/www/templates/welcomePage2.html
@@ -4,6 +4,6 @@
       <img src="img/taxime.png" style="display: block; width: 100%; height: auto; margin-left: auto; margin-right: auto;">
     </div>
     <h2 id="welcomePage2-heading6" style="color:#F8EBEE;text-align:center;">Welcome to our Taxi Service</h2>
-    <a ui-sref="signup" id="welcomePage2-button8" style="font-weight:500;color:#1753B3;font-size:25px;border-radius:6px 6px 6px 6px;" class="button button-energized button-large button-block icon-right ion-android-arrow-forward">Get Start</a>
+    <a ui-sref="menu.home" id="welcomePage2-button8" style="font-weight:500;color:#1753B3;font-size:25px;border-radius:6px 6px 6px 6px;" class="button button-energized button-large button-block icon-right ion-android-arrow-forward">Get Start</a>
   </ion-content>
 </ion-view>
