--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,3 +1,10 @@
-<ion-view title="Home" id="page1" style="background-color:#FFFFFF;">
+<ion-view ng-controller="homeCtrl" title="Home" id="page1" style="background-color:#FFFFFF;" ng-init="initialize()">
   <ion-content padding="true" class="has-header"></ion-content>
+  <ion-content>
+    <div id="map" data-tap-disabled="true" style="height: 100%; width: 100%">
+    </div>
+  </ion-content>
+  <ion-footer-bar class="bar-dark">
+    <a ng-click="centerOnMe()" class="button button-icon icon ion-navigate">Find Me</a>
+  </ion-footer-bar>
 </ion-view>
