--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -12,7 +12,7 @@
         </label>
       </ion-list>
       <div class="spacer" style="height: 40px;"></div>
-      <button id="login-button10" class="button button-stable  button-block">Log in</button>
+      <button id="login-button10" class="button button-stable  button-block" ng-click="login()">Log in</button>
       <a ui-sref="signup" id="login-button11" class="button button-energized  button-block button-clear">Or create an account</a>
     </form>
   </ion-content>
