--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,14 +18,14 @@
           <img src="img/user.png">
           <h2balanced>Username</h2balanced>
         </ion-item>
-        <ion-item class="positive" id="menu-list-item1" ui-sref="menu.home" menu-close="">Home</ion-item>
-        <ion-item class="positive" id="menu-list-item2" ui-sref="menu.telNumber" menu-close="">Tel Number</ion-item>
-        <ion-item class="positive" id="menu-list-item3" ui-sref="menu.profile" menu-close="">Profile</ion-item>
-        <ion-item class="positive" id="menu-list-item4" ui-sref="menu.myTrips" menu-close="">My Trips</ion-item>
-        <ion-item class="positive" id="menu-list-item5" ui-sref="menu.promotions" menu-close="">Promotions</ion-item>
-        <ion-item class="positive" id="menu-list-item6" ui-sref="menu.payment" menu-close="">Payment</ion-item>
-        <ion-item class="positive" id="menu-list-item7" ui-sref="menu.aboutUs" menu-close="">About Us</ion-item>
-        <ion-item class="positive" id="menu-list-item8" ui-sref="menu.support" menu-close="">Support</ion-item>
+        <ion-item class="positive" id="menu-list-item1" ui-sref="menu.home" menu-close>Home</ion-item>
+        <ion-item class="positive" id="menu-list-item2" ui-sref="menu.telNumber" menu-close>Tel Number</ion-item>
+        <ion-item class="positive" id="menu-list-item3" ui-sref="menu.profile" menu-close>Profile</ion-item>
+        <ion-item class="positive" id="menu-list-item4" ui-sref="menu.myTrips" menu-close>My Trips</ion-item>
+        <ion-item class="positive" id="menu-list-item5" ui-sref="menu.promotions" menu-close>Promotions</ion-item>
+        <ion-item class="positive" id="menu-list-item6" ui-sref="menu.payment" menu-close>Payment</ion-item>
+        <ion-item class="positive" id="menu-list-item7" ui-sref="menu.aboutUs" menu-close>About Us</ion-item>
+        <ion-item class="positive" id="menu-list-item8" ui-sref="menu.support" menu-close>Support</ion-item>
       </ion-list>
       <button id="menu-button2" class="button button-positive  button-block button-outline icon-left ion-log-out">Log Out</button>
     </ion-content>
