login and register are completed..

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -18,7 +18,7 @@
       </ion-list>
       <div class="spacer" style="height: 40px;"></div>
       <button id="login-button10" class="button button-stable  button-block" type="submit">Log in</button>
-      <a ui-sref="menu.home" id="login-button11" class="button button-energized  button-block button-clear">Or create an account</a>
+      <a ui-sref="signup" id="login-button11" class="button button-energized  button-block button-clear">Or create an account</a>
       <span ng-show="success">Success</span>
     </form>
   </ion-content>
