--- a/www/templates/welcomePage1.html
+++ b/www/templates/welcomePage1.html
@@ -4,6 +4,6 @@
       <img src="img/taxime.png" style="display: block; width: 100%; height: auto; margin-left: auto; margin-right: auto;">
     </div>
     <h2 id="welcomePage1-heading5" style="color:#F8EBEE;text-align:center;">Welcome to our Taxi Service</h2>
-    <a ui-sref="menu.home" id="welcomePage1-button7" style="font-weight:500;font-style:italic;color:#1753B3;font-size:25px;border-radius:6px 6px 6px 6px;" class="button button-energized button-large button-block icon-right ion-android-arrow-forward">Next</a>
+    <a ui-sref="login" id="welcomePage1-button7" style="font-weight:500;font-style:italic;color:#1753B3;font-size:25px;border-radius:6px 6px 6px 6px;" class="button button-energized button-large button-block icon-right ion-android-arrow-forward">Next</a>
   </ion-content>
 </ion-view>
