--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,4 +1,4 @@
-<ion-view ng-controller="homeCtrl" title="Home" id="page1" style="background-color:#FFFFFF;" ng-init="initialize()">
+<ion-view ng-controller="homeCtrl" title="Home" id="page1" style="background-color:#FFFFFF;" ng-init="init()">
   <ion-content padding="true" class="has-header"></ion-content>
   <ion-content>
 
